syntax = "proto3";

package msg;

enum Type {
     CLIENT_INPUT   = 0; // Session <- Hub <- Client
     SESSION_OUTPUT = 1; // Session -> Hub -> Client
     SESSION_RESIZE = 2; // Session <- Hub <- Client
     SESSION_CLOSE  = 3; // Session <- Hub <- Client
     CLIENT_CLOSE   = 4; // Session    Hub -> Client
}
